--- a/context/runtime/config/caddy/main.conf
+++ b/context/runtime/config/caddy/main.conf
@@ -1,6 +1,9 @@
-# Healthcheck
-http://127.0.0.1:10042 {
-  root /config/healthcheck
+{
+#	{$debug}
+#	default_sni {$SNI}
+	admin   off
+#	local_certs
+	auto_https off
 }
 
 # Import all sites config
