--- a/context/runtime/config/caddy/sites.d/aptly.conf
+++ b/context/runtime/config/caddy/sites.d/aptly.conf
@@ -1,16 +1,40 @@
 http://:{$PORT} {
-  basicauth / {$USERNAME} {$PASSWORD}
+  @proxy {
+    header Proxy-Authorization Basic*
+  }
 
-  log / /dev/stdout "{hostonly} {combined}"
-  errors /dev/stderr
+  @noproxy {
+    not {
+      header Proxy-Authorization Basic*
+    }
+  }
 
-  header / {
+  request_header @proxy Authorization {http.request.header.Proxy-Authorization}
+  request_header @proxy -Proxy-Authorization
+
+  log {
+    output stdout
+    format json
+    level {$LOG_LEVEL}
+  }
+
+  header {
     X-Xss-Protection "1; mode=block"
     X-Content-Type-Options "nosniff"
     X-Frame-Options "DENY"
     Referrer-Policy "strict-origin-when-cross-origin"
   }
 
-  root /data/aptly/public
-  browse
+  reverse_proxy @proxy http://127.0.0.1:{$PORT}
+
+  basicauth @noproxy bcrypt "{$REALM}" {
+    {$USERNAME} {$PASSWORD}
+  }
+
+  file_server @noproxy browse {
+    root   /data/aptly/public
+  #  hide   <files...>
+  #  index  <filenames...>
+  #  browse [<template_file>]
+  }
 }
