--- a/context/runtime/config/caddy/main.conf
+++ b/context/runtime/config/caddy/main.conf
@@ -9,18 +9,9 @@
 	auto_https disable_redirects
 }
 
-# Healthcheck
-{$HEALTHCHECK_URL} {
-  respond 200 {
-    body {}
-    close
-  }
-}
-
-https://{$DOMAIN} http://127.0.0.1:10043 {
-  tls {$TLS} {
-  }
-
+# The frontend sets final headers, does some rewriting of ProxyAuth, and passes it to the backend
+# The backend implements authentication before passing it down to the actual cacher
+http://127.0.0.1:10042 {
   log {
     output stdout
     format json
@@ -43,7 +34,7 @@ https://{$DOMAIN} http://127.0.0.1:10043 {
     Referrer-Policy "strict-origin-when-cross-origin"
 
     # enable HSTS
-    Strict-Transport-Security max-age=31536000; includeSubDomains; preload
+    Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
 
     # CSP
     Content-Security-Policy "default-src 'self';"
@@ -52,33 +43,55 @@ https://{$DOMAIN} http://127.0.0.1:10043 {
     Server "DuboDubonDuponey/1.0 (Caddy/2)"
   }
 
-  file_server /ca {
-    root /certs/pki/authorities/local/root.crt
+  basicauth bcrypt "{$REALM}" {
+    {$USERNAME} {$PASSWORD}
   }
 
-  @proxy {
-    header Proxy-Authorization Basic*
-  }
-
-  @noproxy {
-    not {
-      header Proxy-Authorization Basic*
-    }
-  }
-
-  request_header @proxy Authorization {http.request.header.Proxy-Authorization}
-  request_header @proxy -Proxy-Authorization
-
-  reverse_proxy @proxy http://127.0.0.1:10043
-
-  basicauth @noproxy bcrypt "{$REALM}" {
-    {$USERNAME} {$PASSWORD} {$SALT}
-  }
-
-  file_server @noproxy browse {
+  file_server browse {
     root   /data/aptly/public
   #  hide   <files...>
   #  index  <filenames...>
   #  browse [<template_file>]
+  }
+}
+
+# Add debian for proxy use
+# XXX parameterize this
+https://{$DOMAIN} https://*.debian.org {
+  tls {$TLS} {
+  # TODO Force signing with the root to simplify trust and deployment (linux is fine with the root, but not macOS as far as I can tell)
+  #    client_auth {
+  #      mode                 require_and_verify
+  #      trusted_ca_cert_file ../caddy.ca.cer
+  #      trusted_ca_cert_file ../root.ca.cer
+  #    }
+  }
+
+  # Remove dupe entry (this is set by the backedn)
+  header -Server
+
+  # If we have a proxy auth, rewrite it into plain auth before we pass it down
+  @proxy {
+    header Proxy-Authorization *
+  }
+
+  handle @proxy {
+    request_header Authorization {http.request.header.Proxy-Authorization}
+    request_header -Proxy-Authorization
+  }
+
+  # Strip the host part so our backend accept it
+  request_header X-Host {http.request.header.Host}
+  request_header -Host
+
+  # Pass it down
+  reverse_proxy http://127.0.0.1:10042
+}
+
+# Healthcheck
+{$HEALTHCHECK_URL} {
+  respond 200 {
+    body {}
+    close
   }
 }
