--- a/context/runtime/config/caddy/main.conf
+++ b/context/runtime/config/caddy/main.conf
@@ -1,5 +1,5 @@
 {
-#	{$debug}
+  #	{$debug}
 	https_port {$PORT}
 	default_sni {$DOMAIN}
 	admin off
@@ -9,8 +9,8 @@
 	auto_https disable_redirects
 }
 
-# The frontend sets final headers, does some rewriting of ProxyAuth, and passes it to the backend
-# The backend implements authentication before passing it down to the actual cacher
+# The frontend (bottom section) sets final headers, does some rewriting of ProxyAuth, and passes it to the backend
+# The backend (here) implements authentication before passing it down to the actual service
 http://127.0.0.1:10042 {
   log {
     output stdout
@@ -43,10 +43,12 @@ http://127.0.0.1:10042 {
     Server "DuboDubonDuponey/1.0 (Caddy/2)"
   }
 
+  # XXX to be replaced by SSO / something better
   basicauth bcrypt "{$REALM}" {
     {$USERNAME} {$PASSWORD}
   }
 
+  # Actual backend
   file_server browse {
     root   /data/aptly/public
   #  hide   <files...>
@@ -55,9 +57,7 @@ http://127.0.0.1:10042 {
   }
 }
 
-# Add debian for proxy use
-# XXX parameterize this
-https://{$DOMAIN} https://*.debian.org {
+https://{$DOMAIN} {
 	tls {$TLS} {
     client_auth {
       mode {$MTLS_MODE}
@@ -68,7 +68,7 @@ https://{$DOMAIN} https://*.debian.org {
     }
 	}
 
-  # Remove dupe entry (this is set by the backedn)
+  # Remove dupe entry (this is set by the backend)
   header -Server
 
   # If we have a proxy auth, rewrite it into plain auth before we pass it down
