--- a/context/runtime/config/caddy/main.conf
+++ b/context/runtime/config/caddy/main.conf
@@ -1,3 +1,4 @@
 import conf.d/global.conf
-import sites.d/main.conf
 import sites.d/healthcheck.conf
+import sites.d/middleware.conf
+import sites.d/main.conf
